[gd_scene load_steps=4 format=3 uid="uid://bjpapxo1gx4qd"]

[ext_resource type="PackedScene" uid="uid://rjycex753wup" path="res://Scenes/Enemies/enemy.tscn" id="1_ewunv"]
[ext_resource type="Script" uid="uid://ffrsq6px7jkj" path="res://Scripts/Enemies/enemy_spitter.gd" id="2_ewunv"]
[ext_resource type="Texture2D" uid="uid://bc12dj2pbdjmi" path="res://Assets/Textures/Enemies/spitter.png" id="3_ewunv"]

[node name="Enemy" instance=ExtResource("1_ewunv")]
collision_mask = 5
script = ExtResource("2_ewunv")
wander_radius = 50.0
move_speed = 80.0
attack_range = 300.0
max_health = 16

[node name="CollisionShape2D" parent="AggroRange" index="0"]
visible = true

[node name="Sprite2D" parent="." index="1"]
position = Vector2(0, -54)
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_ewunv")
hframes = 2
vframes = 2

[node name="Gun_marker" parent="Sprite2D" index="0"]
position = Vector2(10, -2)

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(1, -43)

[node name="ShootCD" parent="." index="3"]
wait_time = 2.5

[node name="StepTimer" type="Timer" parent="." index="5"]
wait_time = 0.259

[connection signal="timeout" from="StepTimer" to="." method="_on_step_timer_timeout"]
